feat : 타유저 조회, 기존 api 수정 (#170)